--- a/src/components/EditMovieForm/EditMovieForm.css
+++ b/src/components/EditMovieForm/EditMovieForm.css
@@ -1,201 +1,207 @@
-.favorite-checkbox-label {
-    --icon-size: 24px;
-    --icon-secondary-color: rgb(255, 255, 255);
-    --icon-hover-color: rgb(211, 205, 205);
-    --icon-primary-color: rgb(230, 26, 26);
-    --icon-circle-border: 1px solid var(--icon-primary-color);
-    --icon-circle-size: 35px;
-    --icon-anmt-duration: 0.3s;
+/* checkbox settings 👇 */
+
+.ui-checkbox {
+    --primary-color: #1677ff;
+    --secondary-color: #fff;
+    --primary-hover-color: #4096ff;
+    /* checkbox */
+    --checkbox-diameter: 20px;
+    --checkbox-border-radius: 5px;
+    --checkbox-border-color: #d9d9d9;
+    --checkbox-border-width: 1px;
+    --checkbox-border-style: solid;
+    /* checkmark */
+    --checkmark-size: 1.2;
   }
   
-  .favorite-checkbox-label input {
+  .ui-checkbox, 
+  .ui-checkbox *, 
+  .ui-checkbox *::before, 
+  .ui-checkbox *::after {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  
+  .ui-checkbox {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    display: none;
-  }
-  
-  .favorite-checkbox-label .favorite-checkbox {
-    width: var(--icon-size);
-    height: auto;
-    fill: var(--icon-secondary-color);
+    width: var(--checkbox-diameter);
+    height: var(--checkbox-diameter);
+    border-radius: var(--checkbox-border-radius);
+    background: var(--secondary-color);
+    border: var(--checkbox-border-width) var(--checkbox-border-style) var(--checkbox-border-color);
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
     cursor: pointer;
-    -webkit-transition: 0.2s;
-    -o-transition: 0.2s;
-    transition: 0.2s;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
     position: relative;
-    -webkit-transform-origin: top;
-    -ms-transform-origin: top;
-    transform-origin: top;
   }
   
-  .favorite-checkbox::after {
+  .ui-checkbox::after {
     content: "";
     position: absolute;
-    width: 10px;
-    height: 10px;
-    -webkit-box-shadow: 0 30px 0 -4px var(--icon-primary-color),
-      30px 0 0 -4px var(--icon-primary-color),
-      0 -30px 0 -4px var(--icon-primary-color),
-      -30px 0 0 -4px var(--icon-primary-color),
-      -22px 22px 0 -4px var(--icon-primary-color),
-      -22px -22px 0 -4px var(--icon-primary-color),
-      22px -22px 0 -4px var(--icon-primary-color),
-      22px 22px 0 -4px var(--icon-primary-color);
-    box-shadow: 0 30px 0 -4px var(--icon-primary-color),
-      30px 0 0 -4px var(--icon-primary-color),
-      0 -30px 0 -4px var(--icon-primary-color),
-      -30px 0 0 -4px var(--icon-primary-color),
-      -22px 22px 0 -4px var(--icon-primary-color),
-      -22px -22px 0 -4px var(--icon-primary-color),
-      22px -22px 0 -4px var(--icon-primary-color),
-      22px 22px 0 -4px var(--icon-primary-color);
-    border-radius: 50%;
-    -webkit-transform: scale(0);
-    -ms-transform: scale(0);
-    transform: scale(0);
-  }
-  
-  .favorite-checkbox::before {
-    content: "";
-    position: absolute;
-    border-radius: 50%;
-    border: var(--icon-circle-border);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    -webkit-box-shadow: 0 0 0 calc(var(--checkbox-diameter) / 2.5) var(--primary-color);
+    box-shadow: 0 0 0 calc(var(--checkbox-diameter) / 2.5) var(--primary-color);
+    border-radius: inherit;
     opacity: 0;
+    -webkit-transition: all 0.5s cubic-bezier(0.12, 0.4, 0.29, 1.46);
+    -o-transition: all 0.5s cubic-bezier(0.12, 0.4, 0.29, 1.46);
+    transition: all 0.5s cubic-bezier(0.12, 0.4, 0.29, 1.46);
+  }
+  
+  .ui-checkbox::before {
+    top: 40%;
+    left: 50%;
+    content: "";
+    position: absolute;
+    width: 4px;
+    height: 7px;
+    border-right: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
+    -webkit-transform: translate(-50%, -50%) rotate(45deg) scale(0);
+    -ms-transform: translate(-50%, -50%) rotate(45deg) scale(0);
+    transform: translate(-50%, -50%) rotate(45deg) scale(0);
+    opacity: 0;
+    -webkit-transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6),opacity 0.1s;
+    -o-transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6),opacity 0.1s;
+    transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6),opacity 0.1s;
   }
   
   /* actions */
   
-  .favorite-checkbox-label:hover .favorite-checkbox {
-    fill: var(--icon-hover-color);
+  .ui-checkbox:hover {
+    border-color: var(--primary-color);
   }
   
-  .favorite-checkbox-label input:checked + .favorite-checkbox::after {
-    -webkit-animation: circles var(--icon-anmt-duration)
-      cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
-    animation: circles var(--icon-anmt-duration)
-      cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
-    -webkit-animation-delay: var(--icon-anmt-duration);
-    animation-delay: var(--icon-anmt-duration);
+  .ui-checkbox:checked {
+    background: var(--primary-color);
+    border-color: transparent;
   }
   
-  .favorite-checkbox-label input:checked + .favorite-checkbox {
-    fill: var(--icon-primary-color);
-    -webkit-animation: favorite-checkbox var(--icon-anmt-duration) forwards;
-    animation: favorite-checkbox var(--icon-anmt-duration) forwards;
-    -webkit-transition-delay: 0.3s;
-    -o-transition-delay: 0.3s;
-    transition-delay: 0.3s;
+  .ui-checkbox:checked::before {
+    opacity: 1;
+    -webkit-transform: translate(-50%, -50%) rotate(45deg) scale(var(--checkmark-size));
+    -ms-transform: translate(-50%, -50%) rotate(45deg) scale(var(--checkmark-size));
+    transform: translate(-50%, -50%) rotate(45deg) scale(var(--checkmark-size));
+    -webkit-transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+    -o-transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+    transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
   }
   
-  .favorite-checkbox-label input:checked + .favorite-checkbox::before {
-    -webkit-animation: circle var(--icon-anmt-duration)
-      cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
-    animation: circle var(--icon-anmt-duration)
-      cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
-    -webkit-animation-delay: var(--icon-anmt-duration);
-    animation-delay: var(--icon-anmt-duration);
+  .ui-checkbox:active:not(:checked)::after {
+    -webkit-transition: none;
+    -o-transition: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    transition: none;
+    opacity: 1;
+  }
+
+  .form-container {
+    width: 400px;
+    background: linear-gradient(#212121, #212121) padding-box,
+                linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
+    border: 2px solid transparent;
+    padding: 32px 24px;
+    font-size: 14px;
+    font-family: inherit;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    box-sizing: border-box;
+    border-radius: 16px;
   }
   
-  @-webkit-keyframes favorite-checkbox {
-    50% {
-      -webkit-transform: scaleY(0.6);
-      transform: scaleY(0.6);
-    }
-  
-    100% {
-      -webkit-transform: scaleY(1);
-      transform: scaleY(1);
-    }
+  .form-container button:active {
+    scale: 0.95;
   }
   
-  @keyframes favorite-checkbox {
-    50% {
-      -webkit-transform: scaleY(0.6);
-      transform: scaleY(0.6);
-    }
-  
-    100% {
-      -webkit-transform: scaleY(1);
-      transform: scaleY(1);
-    }
+  .form-container .form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
   
-  @-webkit-keyframes circle {
-    from {
-      width: 0;
-      height: 0;
-      opacity: 0;
-    }
-  
-    90% {
-      width: var(--icon-circle-size);
-      height: var(--icon-circle-size);
-      opacity: 1;
-    }
-  
-    to {
-      opacity: 0;
-    }
+  .form-container .form-group {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
   }
   
-  @keyframes circle {
-    from {
-      width: 0;
-      height: 0;
-      opacity: 0;
-    }
-  
-    90% {
-      width: var(--icon-circle-size);
-      height: var(--icon-circle-size);
-      opacity: 1;
-    }
-  
-    to {
-      opacity: 0;
-    }
+  .form-container .form-group label {
+    display: block;
+    margin-bottom: 5px;
+    color: #717171;
+    font-weight: 600;
+    font-size: 12px;
   }
   
-  @-webkit-keyframes circles {
-    from {
-      -webkit-transform: scale(0);
-      transform: scale(0);
-    }
-  
-    40% {
-      opacity: 1;
-    }
-  
-    to {
-      -webkit-transform: scale(0.8);
-      transform: scale(0.8);
-      opacity: 0;
-    }
+  .form-container .form-group input {
+    width: 100%;
+    padding: 12px 16px;
+    border-radius: 8px;
+    color: #fff;
+    font-family: inherit;
+    background-color: transparent;
+    border: 1px solid #414141;
   }
   
-  @keyframes circles {
-    from {
-      -webkit-transform: scale(0);
-      transform: scale(0);
-    }
-  
-    40% {
-      opacity: 1;
-    }
-  
-    to {
-      -webkit-transform: scale(0.8);
-      transform: scale(0.8);
-      opacity: 0;
-    }
+  .form-container .form-group textarea {
+    width: 100%;
+    padding: 12px 16px;
+    border-radius: 8px;
+    resize: none;
+    color: #fff;
+    height: 96px;
+    border: 1px solid #414141;
+    background-color: transparent;
+    font-family: inherit;
   }
+  
+  .form-container .form-group input::placeholder {
+    opacity: 0.5;
+  }
+  
+  .form-container .form-group input:focus {
+    outline: none;
+    border-color: #e81cff;
+  }
+  
+  .form-container .form-group textarea:focus {
+    outline: none;
+    border-color: #e81cff;
+  }
+  
+  .form-container .form-submit-btn {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    align-self: flex-start;
+    font-family: inherit;
+    color: #717171;
+    font-weight: 600;
+    width: 40%;
+    background: #313131;
+    border: 1px solid #414141;
+    padding: 12px 16px;
+    font-size: inherit;
+    gap: 8px;
+    margin-top: 8px;
+    cursor: pointer;
+    border-radius: 6px;
+  }
+  
+  .form-container .form-submit-btn:hover {
+    background-color: #fff;
+    border-color: #fff;
+  }
+  
+  
+  
+  
